--- a/requirements.txt
+++ b/requirements.txt
@@ -1,90 +1,1 @@
-altgraph==0.17.2
-anyio==3.6.2
-argon2-cffi==20.1.0
-asgiref==3.2.3
-astroid==2.3.3
-async-generator==1.10
-attrs==21.2.0
-Babel==2.9.1
-backcall==0.2.0
-bleach==4.0.0
-certifi==2021.5.30
-cffi==1.14.6
-charset-normalizer==2.0.4
-click==8.0.1
-colorama==0.4.3
-cycler==0.10.0
-debugpy==1.4.1
-decorator==5.0.9
-defusedxml==0.7.1
-entrypoints==0.3
-fastapi==0.89.1
-future==0.18.2
-greenlet==1.1.0
-h11==0.14.0
-json5==0.9.6
-jsonschema==3.2.0
-nbclassic==0.3.1
-nbclient==0.5.3
-nbconvert==6.1.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.2
-numpy==1.21.1
-packaging==21.0
-pandas==1.3.1
-pandocfilters==1.4.3
-parso==0.8.2
-pefile==2022.5.30
-pickleshare==0.7.5
-Pillow==8.3.1
-prometheus-client==0.11.0
-prompt-toolkit==3.0.19
-pycparser==2.20
-pydantic==1.10.4
-pygame==2.1.2
-Pygments==2.9.0
-pyinstaller==5.2
-pyinstaller-hooks-contrib==2022.8
-pylint==2.4.4
-pyparsing==2.4.7
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-pytz==2019.3
-pywin32==301
-pywin32-ctypes==0.2.0
-pywinpty==1.1.3
-PyYAML==6.0
-pyzmq==22.2.1
-qtconsole==5.1.1
-QtPy==1.9.0
-requests==2.26.0
-requests-unixsocket==0.2.0
-scikit-learn==0.24.2
-scipy==1.7.1
-seaborn==0.11.1
-selenium==3.141.0
-Send2Trash==1.7.1
-six==1.13.0
-sklearn==0.0
-sniffio==1.2.0
-SQLAlchemy==1.4.22
-sqlparse==0.3.0
-starlette==0.22.0
-terminado==0.10.1
-testpath==0.5.0
-threadpoolctl==2.2.0
-toml==0.10.2
-tornado==6.1
-traitlets==5.0.5
-turtle==0.0.1
-typing_extensions==4.4.0
-urllib3==1.26.6
-uvicorn==0.20.0
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.1.1
-Werkzeug==2.0.1
-widgetsnbextension==3.5.1
-wordcloud==1.8.1
-wrapt==1.11.2
+Flask==2.2.2
